@@ -8,6 +8,8 @@
 ** Improved gsl_ran_negative_binomial_pdf to avoid underflow/overflow
    for large arguments.
 
+** Multisets now allow k strictly greater than n.
+
 * What was new in gsl-1.15:
 
 ** Added Tuomo Keskitalo's new ode branch ode-initval2 with a
